--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: NistPagesTemplate
-description: "To improve the electric grid, we must empower consumers. Join the effort to give all Americans the information they need to become active participants in their own power usage."
+title: CPS Public Working Group
+description: "The Cyber-Physical Systems Public Working Group (CPS PWG) will bring together experts to help define and shape key aspects of CPS to accelerate its development and implementation within multiple sectors of our economy."
 
-baseurl: "/NistPagesTemplate"
+baseurl: "/cpspwg"
 rooturl: ""
 
 # Build settings
